--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -67,3 +67,23 @@
       @apply bg-background text-foreground;
     }
   }
+
+  /* width */
+::-webkit-scrollbar {
+  width: 5px;
+}
+/* Track */
+::-webkit-scrollbar-track {
+  background: #111010;
+}
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #8888;
+  border-radius: 5px;
+}
+
+.titleUrl {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
